<resources>
    <string name="app_name">TMS_android_project</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="news_fragment_label">News Fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="about_new_fragment_label">About new Fragment</string>
    <string name="service_fragment_label">Service Fragment</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>


    <!-- Hints -->
    <string name="username_edit_text_hint">Enter username</string>
    <string name="password_edit_text_hint">Enter password</string>

    <!-- Buttons -->
    <string name="login_button_text">Login</string>
    <string name="start_service_button_text">Start</string>
    <string name="end_service_button_text">End</string>

    <string name="username_text">Username:</string>
    <string name="password_text">Password:</string>

    <!-- Test string -->
    <string name="big_test_string">test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test</string>
    <string name="small_test_string">test test test test</string>



    <!--  Test spinner -->
    <string-array name="cars">
        <item>Mazda</item>
        <item>Honda</item>
        <item>Bmw</item>
        <item>Kia</item>
    </string-array>

    <!-- test listView -->
    <string-array name="cars_list">
        <item>Mazda</item>
        <item>Honda</item>
        <item>Bmw</item>
        <item>Kia</item>
        <item>Mersedes</item>
        <item>Lada</item>
        <item>Bentley</item>
        <item>Rover</item>
    </string-array>
</resources>