<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ui.presentation.fragments.LoginFragment">

    <com.example.tms_android_project.ui.presentation.custom.SmileView
        android:id="@+id/emotionalFaceView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@id/username_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerInParent="true">
    </com.example.tms_android_project.ui.presentation.custom.SmileView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:text="@string/username_text"
        android:textColor="@color/yellow_700"
        app:layout_constraintBottom_toTopOf="@id/username_edit_text"
        app:layout_constraintStart_toStartOf="@id/username_edit_text" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:hint="@string/username_edit_text_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_200"
        app:layout_constraintBottom_toTopOf="@id/password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:text="@string/password_text"
        android:textColor="@color/yellow_700"
        app:layout_constraintBottom_toTopOf="@id/password_edit_text"
        app:layout_constraintStart_toStartOf="@id/password_edit_text" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="100dp"
        android:hint="@string/password_edit_text_hint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_200"
        app:layout_constraintBottom_toTopOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_text" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:enabled="false"
        android:text="@string/login_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>